src/libqwidget.h

typedef struct QWidget QWidget;
typedef struct QWindow QWindow;
void QWidget_SetWindowFlag2(QWidget* self, int param1, bool on);
void QWidget_SetAttribute2(QWidget* self, int param1, bool on);
QWidget* QWidget_CreateWindowContainer2(QWindow* window, QWidget* parent);
QWidget* QWidget_CreateWindowContainer3(QWindow* window, QWidget* parent, int flags);
void QWidget_UpdateMicroFocus1(QWidget* self, int query);
void QWidget_Create1(QWidget* self, unsigned long long param1);
void QWidget_Create2(QWidget* self, unsigned long long param1, bool initializeWindow);
void QWidget_Create3(QWidget* self, unsigned long long param1, bool initializeWindow, bool destroyOldWindow);
void QWidget_Destroy1(QWidget* self, bool destroyWindow);
void QWidget_Destroy2(QWidget* self, bool destroyWindow, bool destroySubWindows);