src/qt/libqwidget.bf

	[LinkName("QWidget_SetWindowFlag2")]
	public static extern void QWidget_SetWindowFlag2(Self* c_this, int64 param1, bool on);
	[LinkName("QWidget_SetAttribute2")]
	public static extern void QWidget_SetAttribute2(Self* c_this, int64 param1, bool on);
	[LinkName("QWidget_CreateWindowContainer2")]
	public static extern QWidget* QWidget_CreateWindowContainer2(QWindow* window, QWidget* parent);
	[LinkName("QWidget_CreateWindowContainer3")]
	public static extern QWidget* QWidget_CreateWindowContainer3(QWindow* window, QWidget* parent, int64 flags);
	[LinkName("QWidget_UpdateMicroFocus1")]
	public static extern void QWidget_UpdateMicroFocus1(Self* c_this, int64 query);
	[LinkName("QWidget_Create1")]
	public static extern void QWidget_Create1(Self* c_this, uint64 param1);
	[LinkName("QWidget_Create2")]
	public static extern void QWidget_Create2(Self* c_this, uint64 param1, bool initializeWindow);
	[LinkName("QWidget_Create3")]
	public static extern void QWidget_Create3(Self* c_this, uint64 param1, bool initializeWindow, bool destroyOldWindow);
	[LinkName("QWidget_Destroy1")]
	public static extern void QWidget_Destroy1(Self* c_this, bool destroyWindow);
	[LinkName("QWidget_Destroy2")]
	public static extern void QWidget_Destroy2(Self* c_this, bool destroyWindow, bool destroySubWindows);
}